[tool.poetry]
name = "nxtools"
version = "1.6"
description = "nxtools is a set of various tools and helpers used by Nebula broadcast automation system and other software by imm studios, z.s."
keywords = ["utilities", "logging", "automation", "ffmpeg", "casparcg"]
repository = "https://github.com/immstudios/nxtools"
authors = ["Martin Wacker <martas@imm.cz>"]
license = "MIT"
readme = "README.md"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.4"
Unidecode = "^1.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
test = 'scripts:test'
docs = 'scripts:docs'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
