[tool.poetry]
name = "nxtools"
version = "2.0.0"
description = "nxtools is a set of various tools and helpers used by Nebula broadcast automation system and other software by imm studios, z.s."
keywords = ["utilities", "logging", "automation", "ffmpeg", "casparcg"]
repository = "https://github.com/immstudios/nxtools"
authors = ["Martin Wacker <martas@imm.cz>"]
license = "MIT"
readme = "README.md"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"
Unidecode = "^1.2.0"

[tool.poetry.dev-dependencies]
mypy = "^1.8"
ruff = "^0.3.1"

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "ISC001", # incompatible with formatting
    "E721",  # do not compare types, i'll fix this later :)
    "C901",  # too complex. C'mon - this is a complex project
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
